@@ -1,58 +1,11 @@
 plugins {
-    id 'java'
-    id "org.sonarqube" version "5.0.0.4638"
-    id 'org.springframework.boot' version "3.2.6"
-    id 'io.spring.dependency-management' version "1.1.5"
-    id "jacoco"
-}
-
-test {
-    useJUnitPlatform()
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    id "dolly-apps"
 }
 
 sonarqube {
     properties {
-        property "sonar.dynamicAnalysis", "reuseReports"
-        property "sonar.host.url", "https://sonarcloud.io"
-        property "sonar.java.coveragePlugin", "jacoco"
-        property "sonar.language", "java"
-        property "sonar.token", System.getenv("SONAR_TOKEN")
-        property "sonar.organization", "navikt"
-        property "sonar.project.monorepo.enabled", true
         property "sonar.projectKey", "testnav-dolly-backend"
         property "sonar.projectName", "testnav-dolly-backend"
-        property "sonar.sourceEncoding", "UTF-8"
-    }
-}
-
-bootJar {
-    archiveFileName = "app.jar"
-    mainClass = 'no.nav.dolly.DollyBackendApplicationStarter'
-}
-
-dependencyManagement {
-    applyMavenExclusions = false
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.1'
-    }
-}
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-repositories {
-    mavenCentral()
-    maven {
-        name = "GitHubPackages"
-        url = uri('https://maven.pkg.github.com/navikt/maven-release')
-        credentials(PasswordCredentials) {
-            password System.getenv("NAV_TOKEN")
-            username 'token'
-        }
     }
 }
 
@@ -67,15 +20,12 @@ dependencies {
     implementation 'no.nav.testnav.libs:data-transfer-search-objects'
     implementation 'no.nav.testnav.libs:reactive-core'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
     implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
 
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     implementation 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.21'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -95,13 +45,11 @@ dependencies {
 
     implementation 'org.postgresql:postgresql'
     implementation 'org.flywaydb:flyway-core'
-    implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'ma.glasnost.orika:orika-core:1.5.4'
     implementation 'org.codehaus.jettison:jettison:1.5.4'
     implementation 'org.apache.poi:poi:5.2.5'
     implementation 'org.apache.poi:poi-ooxml:5.2.5'
 
-    testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation 'org.opensearch:opensearch-testcontainers:2.0.1'
 
     testImplementation 'org.springframework.security:spring-security-test'
@@ -113,8 +61,4 @@ dependencies {
     testImplementation 'org.bitbucket.b_c:jose4j:0.9.6'
 
     implementation 'net.java.dev.jna:jna:5.14.0'
-
-    annotationProcessor 'org.projectlombok:lombok'
-    implementation 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
 }
